# fake-id-solana-program

./: README.md
cli/: .gitignore  Readme.md  info.json  package.json
cli/assets/: 0.json  1.json
cli/src/: index.ts  usdc-fake-id.json
contract/: .gitignore
contract/solana_anchor/: Cargo.toml  membership.json  usdc-fake-id-.json
contract/solana_anchor/src/: lib.rs
ui/: README.md  package-lock.json  package.json
ui/public/: index.html
ui/src/: App.tsx
ui/src/helper/: getAccountInfo.ts  getOrCreateAssociatedTokenAccount.ts
ui/src/pages/: membership.json  membership_sft.json  mint.tsx  nfp-nft.json  usdc-fake-id-.json
