[package]
name = "solana_anchor"
version = "0.1.0"
description = "Created with Anchor"
repository = "https://github.com/smartcontractkit/solana-example"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_anchor"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/project-serum/anchor", tag = "v0.19.0" }
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="1.11.0", features = [ "no-entrypoint" ] }
arrayref = "0.3.6"
borsh = "0.9"